# neatness_estimator

./: README.md
neatness_estimator/: CMakeLists.txt  README.md  install_trained_data.py  neatness_estimator.xml  package.xml  setup.py
neatness_estimator/cfg/: MultiEuclideanClustering.cfg
neatness_estimator/include/neatness_estimator/: appearance_difference_estimator.h  data_checker.h  data_saver.h  difference_reasoner.h  estimation_module_interface.h  multi_euclidean_clustering.h  objects_feature_extractor.h
neatness_estimator/launch/: appearance_difference_estimator.launch  basic_vision.launch  cluster_box_publisher.launch  compair_data.launch  compare_data.launch  data_checker.launch  data_corrector.launch  data_saver.launch  difference_reasoner.launch  display_planner.launch  distance_estimator.launch  distance_estimator_module.launch  distance_estimator_module_color_and_geometry.launch  dummy_bbox_publisher.launch  edge_histogram_array.launch  estimation_module_interface.launch  estimation_module_interface_color_and_geometry.launch  euclidean_segmentation.launch  generate_point_cloud.launch  get_motion_primitive.launch  hsi_color_filter.launch  labeled_bounding_box_publisher.launch  mask_rcnn.launch  mask_rcnn_clustering.launch  mask_rcnn_clustering2.launch  mask_rcnn_clustering2_remote.launch  multi_euclidean_clustering.launch  multi_euclidean_clustering_module.launch  neatness_estimator.launch  neatness_estimator2.launch  objects_feature_extractor.launch  organized_edge_detector.launch  rect_projector.launch  sequence_difference_estimation_client.launch  vision_server.launch  wrinkle_detector.launch
neatness_estimator/models/: mask_rcnn_labels.yaml  mask_rcnn_labels_191023.yaml  qatm_labels.yaml
neatness_estimator/plugins/nodelet/: libneatness_estimator.xml
neatness_estimator/sample/: gomibako.rviz  sample_apperance_difference_estimator.launch  sample_basic_vision.launch  sample_gomibako_scene_difference.launch
neatness_estimator/scripts/: cluster_box_publisher.py  color_histogram_server.py  compair_data.py  compare_data.py  compare_data_from_file.py  data_collector.py  data_corrector.py  difference_estimation_client.py  display_planner.py  distance_clustering.py  distance_estimator.py  distance_estimator_from_file.py  dummy_bounding_box_publisher.py  edge_histogram_array.py  get_motion_primitive.py  labeled_bounding_box_publisher.py  neatness_estimator.py  neatness_estimator2.py  neatness_estimator3.py  neatness_estimator_server.py  rect2labelarray.py  sequence_difference_estimation_client.py  test_display_planner.py  transform_coords.py  vision_server.py
neatness_estimator/src/: appearance_difference_estimator.cpp  data_checker.cpp  data_saver.cpp  difference_reasoner.cpp  estimation_module_interface.cpp  multi_euclidean_clustering.cpp  normal_viewer.cpp  objects_feature_extractor.cpp
neatness_estimator/test/: clustering_test.py  dummy_boxes_service_client.py  service_call_test.py  test_pub.py
neatness_estimator/trained_data/: motion_classification_model_191111.csv  motion_classification_model_shuron_610_demo.csv  motion_classification_model_shuron_aist_demo_try5.csv  sample.csv
neatness_estimator_msgs/: CMakeLists.txt  package.xml
neatness_estimator_msgs/msg/: AppearanceDifference.msg  DisplayPlan.msg  DisplayPlanArray.msg  EdgeHistogram.msg  EdgeHistogramArray.msg  Features.msg  Histogram.msg  HistogramArray.msg  Neatness.msg  NeatnessArray.msg  TargetAndGoal.msg  TargetAndGoalArray.msg
neatness_estimator_msgs/srv/: CollectData.srv  CorrectData.srv  DisplayState.srv  GetColorHistogram.srv  GetDifference.srv  GetDisplayFeature.srv  GetFeatures.srv  GetMotionPrimitive.srv  UpdateBoundingBox.srv  VisionServer.srv
