<?xml version="1.0"?>
<package>
  <name>neatness_estimator</name>
  <version>0.0.0</version>
  <description>The neatness_estimator package</description>

  <maintainer email="higashide@jsk.imi.i.u-tokyo.ac.jp">higashide</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>neatness_estimator_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nodelet</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>jsk_recognition_msgs</run_depend>
  <run_depend>neatness_estimator_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nodelet</run_depend>

  <export>
    <nodelet plugin="${prefix}/neatness_estimator.xml"/>
  </export>

</package>
