<?xml version="1.0"?>
<package>
  <name>neatness_estimator_msgs</name>
  <version>0.0.0</version>
  <description>The neatness_estimator_msgs package</description>

  <maintainer email="higashide@jsk.imi.i.u-tokyo.ac.jp">higashide</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>jsk_recognition_msgs</run_depend>

</package>
